--- a/readable-reactux/public/style.css
+++ b/readable-reactux/public/style.css
@@ -1,4 +1,4 @@
-body, html {
+/* body, html {
   height: 100%;
 }
 
@@ -6,4 +6,4 @@ body, html {
   position: fixed;
   top: 0;
   bottom: 0;
-}
+} */
